updated version to 0.076

--- a/sample/unit_tests.html.TMPL
+++ b/sample/unit_tests.html.TMPL
@@ -8,12 +8,12 @@
  body { background-color:wheat }
 </style>
 
-<script src="JSPATH/jquery-latest.js"></script>
-<script src="JSPATH/jquery.dumper.js"></script>
-<script src="JSPATH/jquery.base64.min.js"></script>
-<script src="JSPATH/json2.js"></script>
-<script src="JSPATH/yote/yote.js"></script>
-<script src="JSPATH/yote/yote.util.js"></script>
+<script src="/js//jquery-latest.js"></script>
+<script src="/js//jquery.dumper.js"></script>
+<script src="/js//jquery.base64.min.js"></script>
+<script src="/js//json2.js"></script>
+<script src="/js//yote/yote.js"></script>
+<script src="/js//yote/yote.util.js"></script>
 <script>
     var tests = 0;
 var failed = 0;
