updated html pages. added admin page listing

--- a/yote_root/html/yote.css
+++ b/yote_root/html/yote.css
@@ -1,3 +1,4 @@
+body { background-color: rgba(47, 139, 34, 0.59); }
 section { margin:10px; }
 p { margin-left:10px; }
 .emp { font-family:"Lucida Console",monospace;  }
