interim big checkin. rewriting yote_server to be a daemon and also have its logic in Yote.pm

--- a/yote_root/html/css/main.css
+++ b/yote_root/html/css/main.css
@@ -38,3 +38,10 @@ a:link.active,a:visited.active     { color:#FFFFFF; font-size:large; }
     border : solid 1px black;
 }
 
+div.hover {
+    display: block;
+    position: absolute;
+}
+div.hover_hide {
+    display: none
+}
