META files must be generated by Build dist. Learning to use build dist.

--- a/yote_root/html/css/main.css
+++ b/yote_root/html/css/main.css
@@ -41,6 +41,7 @@ a:link.active,a:visited.active     { color:#FFFFFF; font-size:large; }
 div.hover {
     display: block;
     position: absolute;
+    background-color:lightgreen;
 }
 div.hover_hide {
     display: none
