--- a/yote_root/html/yote.css
+++ b/yote_root/html/yote.css
@@ -1,5 +1,10 @@
 body { background-color: rgba(47, 139, 34, 0.59); margin-left:5px; }
-section > p, section > ul, section > dl { margin:10px; margin-left:50px; }
+section > p, section > ul, section > dl, section > h3, section > blockquote { margin:10px; margin-left:50px; }
+
+section > blockquote {
+    padding: 13px;
+    background-color: rgba( 77, 139, 34, 0.9);
+}
 p { margin-left:10px; }
 .emp { font-family:"Lucida Console",monospace;  }
 .page-header {
