Update to version 0.0981. changes to how root account is created. js util account stuff updated.

--- a/yote_root/html/css/main.css
+++ b/yote_root/html/css/main.css
@@ -50,7 +50,18 @@ div.hover_hide {
     display: none
 }
 .login  { float:right; margin-right:15px; padding-right:15px; display:inline-block; vertical-align:middle; }
+
 .logged_in {
     float:right;
-    color:blue;
+    color:rgb(198, 194, 236);
+}
+a.hotlink:visited, a.hotlink:hover, a.hotlink, .hotlink {
+    color:rgb(198, 194, 236);
+}
+.error {
+    color: orange;
+}
+.info {
+    color: purple;
+
 }
