--- a/yote_root/html/yote.css
+++ b/yote_root/html/yote.css
@@ -1,18 +1,18 @@
 body { background-color: rgba(47, 139, 34, 0.59); margin-left:5px; }
 section > p, section > ul, section > dl, section > h3, section > blockquote { margin:10px; margin-left:50px; }
 section > h3 { margin:10px; margin-left:35px; }
-
+section { margin-bottom: 45px; }
 section > blockquote {
     padding: 13px;
     background-color: rgba( 77, 139, 34, 0.9);
 }
-p { margin-left:10px; }
 .emp { font-family:"Lucida Console",monospace;  }
 .page-header {
     padding-bottom: 9px;
     margin: 20px 0 30px;
     border-bottom: 3px solid #0E7;
 }
+hr { color : 3px solid #0E7; }
 footer{
     margin : 7px;
     padding : 3px;
