--- a/yote_root/html/css/main.css
+++ b/yote_root/html/css/main.css
@@ -93,3 +93,42 @@ div.err {
 .edit_ready { border : 4px black  groove; background-color: lightgrey }
 .in_edit_same { border : 1px black solid; background-color: lightgrey }
 .in_edit_changed { border : 1px black solid; background-color: #FEE }
+
+.tabs {  
+    position: relative;   
+    min-height: 300px; /* This part sucks */
+    clear: both;
+    margin: 25px 0;
+}
+.tab {
+    float: left;
+}
+.tab label {
+    background: #eee; 
+    padding: 10px; 
+    border: 1px solid #ccc; 
+    margin-left: -1px; 
+    position: relative;
+    left: 1px; 
+}
+.tab [type=radio] {
+    display: none;   
+}
+.content {
+    position: absolute;
+    top: 28px;
+    left: 0;
+    background: white;
+    right: 0;
+    bottom: 0;
+    padding: 20px;
+    border: 1px solid #ccc; 
+}
+[type=radio]:checked ~ label {
+    border-bottom: 1px solid white;
+    z-index: 2;
+    background-color:rgba( 0,256,0, .2 );
+}
+[type=radio]:checked ~ label ~ .content {
+    z-index: 1;
+}
