--- a/yote_root/html/templates/templates.html
+++ b/yote_root/html/templates/templates.html
@@ -10,7 +10,7 @@
 <script type="text/template" class="yote_template_definition" template_name="Logged_out">
    <$$$ messages <span>This page requires a root login.</span> $$$><BR>
    <$$$ handle <input placeholder="handle" type="text"> $$$>
-   <$$$ password <input placeholder="password" type="password"> $$$>
+   <$$ password <input placeholder="password" type="password"> $$$>
    <$$$ login_button <button type="BUTTON">Log In</button> $$$>
 <BR>
    <$ action_link forgot Forgot Password $>
