This branch is developing yote so that simple apps can be done on the front end

--- a/yote_root/html/templates/templates.html
+++ b/yote_root/html/templates/templates.html
@@ -48,3 +48,7 @@
     </div>
   </DIV>
 </script>
+
+<script type="text/template" class="yote_template_definition" template_name="Log_in_box">
+ <? check_login_status ?>
+</script>
