--- a/yote_root/html/css/main.css
+++ b/yote_root/html/css/main.css
@@ -17,6 +17,8 @@ body { min-width:600px; margin-top:70px }
 .header a   { display: inline-block; vertical-align: bottom; text-decoration: none; }
 .header a:visited, .header a:link { color:#AAAAAA; text-decoration: none; }
 .navlink a:visited, .navlink a:link { color:#222;text-decoration: none; }
+.navlink { padding:1em; }
+.navlink li  { text-decoration: none; }
 .header a:hover   { color:#DADADA }
 a:link.active,a:visited.active     { color:#FFFFFF; font-size:large; }
 .header img { float: left; }
@@ -44,7 +46,7 @@ a:link.active,a:visited.active     { color:#FFFFFF; font-size:large; }
 div.hover {
     display: block;
     position: absolute;
-    background-color:lightgreen;
+//    background-color:lightgreen;
 }
 div.hover_hide {
     display: none
