Added a method to log in and get the root, app, login and account and any additional app data, all in a single call to speed things up.

--- a/yote_root/html/templates/default_templates.html
+++ b/yote_root/html/templates/default_templates.html
@@ -1,6 +1,6 @@
 
 <script type="text/template" class="yote_template_definition" template_name="Logged_in">
-   Logged in as <$ show acct handle $><BR>
+   Logged in as <$ show _acct_ handle $><BR>
    <$ action_link logout Log Out $>
 </script>
 
