--- a/yote_root/html/templates/default_templates.html
+++ b/yote_root/html/templates/default_templates.html
@@ -55,13 +55,13 @@
     </A>
     <UL id="top_nav" class="nav"></UL>
     <div id="login_div" class="login">
-      <? check_login_status ?>
+      <?? check_login_status ??>
     </div>
   </DIV>
 </script>
 
 <script type="text/template" class="yote_template_definition" template_name="Log_in_box">
- <? check_login_status ?>
+ <?? check_login_status ??>
 </script>
 
 <script type="text/template" class="yote_template_definition" template_name="Log_in_box_admin">
