new simpler templating system and split out templates from yote.util.

--- a/yote_root/html/templates/default_templates.html
+++ b/yote_root/html/templates/default_templates.html
@@ -290,7 +290,7 @@
 <script type="text/template" class="yote_template_definition" template_name="SearchList">
  <$$$ control search_val <input type="TEXT" placeholder="Search"> $$$>
  <$$$ control search_btn <button type="BUTTON">Search</button> $$$>
- <? init_search_list ?>
+ <#? init_search_list ?#>
 </script>
 
 
