new simpler templating system and split out templates from yote.util.

--- a/yote_root/html/templates/default_templates.html
+++ b/yote_root/html/templates/default_templates.html
@@ -171,7 +171,7 @@
    <$$$ control password <input placeholder="password" type="password"> $$$>
    <$$$ control login <button type="BUTTON">Log In</button> $$$>
      <BR>
-   <$$$ control forgot <a href="#">Log In</a> $$$>
+   <$$$ control forgot <a href="#">Forgot Account</a> $$$>
    <$$$ control create <a href="#">Create Account</a> $$$>
    <? function(ctx) {
        $.yote.util.button_actions({
